# tutorial-bot

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  Dockerfile.prod  Makefile  README.md  SYSTEM_OVERVIEW.md  alembic.ini  config.json  docker-compose.yml  fix_db.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/workflows/: ci.yml
app/: config_loader.py  fix_db.py  i18n.py  logging_config.py  logging_json.py  main.py  scratch_kc.py  settings.py
app/api/: dependencies.py  dependencies_auth.py
app/domain/: __init__.py  interaction.py  knowledge_component.py  learner_profile.py  quiz.py  session_context.py
app/infrastructure/: __init__.py  auth.py  chat_store.py  database.py  embedder_factory.py  event_bus.py  pg_vector_store.py  prerequisite_store.py  quiz_store.py  redis_client.py
app/services/: ab_testing.py
app/worker/: post_response_worker.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  App.module.css  api.js  index.css  supabase.js  utils.js
migrations/: 001_create_missing_tables.sql  env.py
migrations/versions/: 001_initial_schema.py  002_rename_tables.py  003_add_users_table.py  004_local_users.py  005_mastery_subject.py  006_chat_sessions.py  007_quiz_tables.py  008_kc_prerequisites.py  009_hallucination_and_pgtrgm.py  010_question_bank.py  011_add_role.py
nginx/: default.conf
prompts/: challenge.md  diagnosis.md  practice.md  reinforcement.md  system_base.md
scripts/: bulk_ingest.py  eval_hallucination.py  eval_kt.py  eval_retrieval.py  extract_questions_from_pdf.py  fill_missing_answers.py  fix_db.py  ingest_question_bank.py  seed_curriculum.py
tests/unit/: test_chunker.py  test_domain.py  test_knowledge_tracing.py  test_llm_factory.py  test_settings.py  (+2 more)
(+62 files in other folders)
